# InnoVenture-Lab

./: .gitignore  README.md
Project1_sm4_optimization/: CMakeLists.txt  Readme.md
Project1_sm4_optimization/benchmarks/: perf_test.c
Project1_sm4_optimization/docs/: GCM_Optimization.md.md  SIMD_Optimization.md  SM4_Algorithm.md
Project1_sm4_optimization/include/: simd_utils.h  sm4.h  sm4_gcm.h
Project1_sm4_optimization/src/: sm4_aesni.c  sm4_avx512.c  sm4_basic.c  sm4_gcm.c  sm4_ttable.c  sm4_win.c
Project1_sm4_optimization/tests/: test_sm4.c
Project2/: demo.py
Project2/core/: attacks.py
Project2/tests/: metrics.py
Project2_/: demo.py
Project2_/core/: dct_watermark.py  recovery.py
Project2_/docs/: algorithm.md
Project2_/tests/: robustness.py
Project2_/utils/: cli_tools.py  pool.py
Project3/circuits/: constants.circom  poseidon2.circom
Project3/scripts/: groth16_setup.sh
Project3/test/: test.js
Project4/bench/: bench_merkle.py
Project4/docs/: spec.md
Project4/src/: merkle_rfc6962.py  sm3_opt.py  sm3_ref.py
Project4/tests/: test_length_extension.py  test_sm3_vectors.py
Project5/docs/: SM2_Math_Derivation.md  Signature_Misuse_Analysis.md
Project5/src/: ecdsa.py  forge_satoshi.py  poc_signature_misuse.py  sm2.py
Project6/: main.py
Project6/bloom/: tbf.py
Project6/client/: client.py  query_handler.py
Project6/docs/: protocol_math.md
Project6/server/: crypto_utils.py  database_loader.py  server.py
Project6/tests/: test_bloom.py  test_crypto.py  test_integration.py
